--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "@react-navigation/stack": "^6.2.2",
@@ -20,8 +21,10 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-gesture-handler": "~2.2.1",
-    "react-native-safe-area-context": "4.2.4",
+    "react-native-paper": "^4.12.2",
+    "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "~3.11.1",
+    "react-native-svg": "12.3.0",
     "react-native-web": "0.17.7",
     "react-redux": "^8.0.2",
     "twrnc": "^3.3.3"
@@ -29,7 +32,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "^18.0.14",
-    "@types/react-native": "~0.66.13",
+    "@types/react-native": "^0.69.2",
     "standard": "^17.0.0",
     "typescript": "~4.3.5"
   },
