--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^6.2.2",
     "@reduxjs/toolkit": "^1.8.3",
     "expo": "~45.0.0",
+    "expo-linear-gradient": "~11.3.0",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@faker-js/faker": "^7.3.0",
     "@types/react": "^18.0.14",
     "@types/react-native": "^0.69.2",
     "standard": "^17.0.0",
