--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.7",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
@@ -18,6 +19,7 @@
     "expo": "~45.0.0",
     "expo-linear-gradient": "~11.3.0",
     "expo-status-bar": "~1.3.0",
+    "firebase": "9.7.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
@@ -28,6 +30,8 @@
     "react-native-svg": "12.3.0",
     "react-native-web": "0.17.7",
     "react-redux": "^8.0.2",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.1",
     "twrnc": "^3.3.3"
   },
   "devDependencies": {
@@ -35,6 +39,7 @@
     "@faker-js/faker": "^7.3.0",
     "@types/react": "^18.0.14",
     "@types/react-native": "^0.69.2",
+    "babel-plugin-module-resolver": "^4.1.0",
     "standard": "^17.0.0",
     "typescript": "~4.3.5"
   },
