--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/react": "^18.0.14",
     "@types/react-native": "^0.69.2",
     "babel-plugin-module-resolver": "^4.1.0",
+    "redux-logger": "^3.0.6",
     "standard": "^17.0.0",
     "typescript": "~4.3.5"
   },
