--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,9 @@
       "@components/*": [
         "src/components/*"
       ],
+      "@hooks/*": [
+        "src/hooks/*"
+      ],
       "@redux/*": [
         "src/redux/*"
       ],
