--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "expo": "~45.0.0",
     "expo-linear-gradient": "~11.3.0",
     "expo-status-bar": "~1.3.0",
-    "firebase": "9.7.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
@@ -39,7 +38,9 @@
     "@faker-js/faker": "^7.3.0",
     "@types/react": "^18.0.14",
     "@types/react-native": "^0.69.2",
+    "@types/redux-logger": "^3.0.9",
     "babel-plugin-module-resolver": "^4.1.0",
+    "firebase": "9.6.1",
     "redux-logger": "^3.0.6",
     "standard": "^17.0.0",
     "typescript": "~4.3.5"
